tests/fails/f20.t

terra foo()
    return niltype + "a"
end
foo()
